--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,3 +29,5 @@ build/
 
 ### VS Code ###
 .vscode/
+
+**/node_modules
